--- a/index.html
+++ b/index.html
@@ -39,17 +39,16 @@
 							<h3>pages disponible</h3>
 							<ul class="news">
 								<li><a href="developpeurs.html">C'est quoi un developpeur ?</a></li>
-								<li><a href="/page_metrique.html">Métriques</a></li>
-								<li><a href="/page_metrique.html">Présentation DTA</a></li>
-								<li><a href="/iot.html">Internet des Objets</a></li>
-								<li><a href="/page_metrique.html">Types des entreprises</a></li>
-								<li><a href="types-entreprises.html">Types des entreprises</a></li>
-								<li><a href="/page_metrique.html">Présentation de la formation</a></li>
-								<li><a href="/page_metrique.html">Ecosystème front-end</a></li>
-								<li><a href="/page_metrique.html">Ecosystème java</a></li>
-								<li><a href="/page_metrique.html">Page : Gestion de projet</a></li>
-								<li><a href="/page_metrique.html">NO-SQL</a></li>
-								<li><a href="/page_metrique.html">Robotique</a></li>
+								<li><a href="page_metrique.html">Les Métriques</a></li>
+								<li><a href="PresentationDTA.html">Présentation DTA</a></li>
+								<li><a href="iot.html">Internet des Objets</a></li>
+								<li><a href="types-entreprises.html">Types d'entreprises</a></li>
+								<li><a href="presentation-formation.html">Présentation de la formation</a></li>
+								<li><a href="ecosysteme_front_end.html">Écosystème front-end</a></li>
+								<li><a href="ecosysteme-java.html">Écosystème Java</a></li>
+								<li><a href="Page_Methodo/PageMethodo.html">Gestion de projet</a></li>
+								<li><a href="page_nosql.html">NO-SQL</a></li>
+								<li><a href="robotique.html">Robotique</a></li>
 							</ul>
 						</div>
 						<div class="col-2">
