--- a/presentation-formation.html
+++ b/presentation-formation.html
@@ -1,126 +1,184 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<meta charset="utf-8"/>
-		<title>Présentaion formation DTA</title>
-		<style>
-			h1 {
-				text-align: center;
-				color: red;
-				text-decoration: underline;
-			}
-			h2 {
-				color: blue;
-				text-decoration: underline;
-			}
-			p {
-				font-size: 1.1em;
-			}
-			li.square {
-				list-style-type: square;
-			}
-			img.logo {
-				margin: 20px 20px 20px 50px;
-				float: right;
-				height: 100%;
-			}
-		</style>
-	</head>
-	<body>
-		<h1>Formation DTA</h1>
-		<div>
-			<img class="logo" src="http://www.dta-ingenierie.fr/img/logoDTA2.png"/>
-			<p>DTA Ingénierie propose aux futures jeunes recrues 3 cycles de formation accélérée. Professionnalisantes, ces formations se déroulent sur des périodes entre 50 et 57 jours, avec projet "tutoré" en fin de cycle. Elles sont complétées par des ateliers "savoir-être".</p>
-			<p>Chaque cursus de formation allie 40% de théorie et 60% de pratique. Les différents modules sont évalués sous forme de QCM, suivi d'un débrief sur les principaux points de blocage rencontrés.</p>
-			<p>Chaque participant finalise sa formation par un projet de développement reprenant l'essentiel des notions abordées. Piloté en méthodes  agiles, ce projet "tutoré" permet à l''équipe pédagogique d'évaluer, puis de valider - ou non - l'acquisition des nouvelles compétences.</p>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+<title>Présentaion formation DTA</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="description" content="Place your description here" />
+<meta name="keywords" content="put, your, keyword, here" />
+<meta name="author" content="Templates.com - website templates provider" />
+<link href="style.css" rel="stylesheet" type="text/css" />
+<link href="layout.css" rel="stylesheet" type="text/css" />
+<script src="js/jquery-1.4.2.min.js" type="text/javascript"></script>
+<script src="js/cufon-yui.js" type="text/javascript"></script>
+<script src="js/cufon-replace.js" type="text/javascript"></script>
+<script src="js/Myriad_Pro_300.font.js" type="text/javascript"></script>
+<script src="js/Myriad_Pro_400.font.js" type="text/javascript"></script>
+<style>
+li.disc {
+	list-style-type: disc;
+}
+li.circle {
+	list-style-type: circle;
+	margin-left: 20px;
+}
+li.square {
+	list-style-type: square;
+}
+</style>
+</head>
+<body id="page4">
+<div class="tail-bottom">
+<!-- HEADER -->
+	<div id="header">
+		<div class="row-1">
+			<div class="fleft"><a href="index.html"><img src="images/logoDTA2.png" width="100px" alt="" /></a></div>
+			<div class="fright">
+				<ul>
+					<li><a href="index.html"><em><b>home</b></em></a></li>
+				</ul>
+			</div>
 		</div>
-		<h2>Le parcours</h2>
-		<p>
-			<ul>
-				<li>Un parcours de 57 jours</li>
-				<li>Financé par Pole Emploi, le FAFIEC et DTA Ingénierie</li>
-				<li>Animé par des professionnels</li>
-				<li>Vise à résorber l'écart entre vos compétences actuelles, à priori plutôt généralistes et théoriques, et celles plus opérationnelles requises dans le cadre de projets JAVA</li>
-				<li>Et à vous intégrer durablement dans l’emploi</li>
-			</ul>
+		<div class="extra"><img src="images/header-img.jpg" alt="" /></div>
+	</div>
+<!-- CONTENT -->
+	<div id="content">
+		<div class="tail-middle1">
+			<div class="row-1">
+				<div class="indent1">
+					<h3>Formation DTA</h3>
+					<div>
+						<img style="float: right;" class="logo" src="http://www.dta-ingenierie.fr/img/logoDTA2.png"/>
+						<p>DTA Ingénierie propose aux futures jeunes recrues 3 cycles de formation accélérée. Professionnalisantes, ces formations se déroulent sur des périodes entre 50 et 57 jours, avec projet "tutoré" en fin de cycle. Elles sont complétées par des ateliers "savoir-être".</p>
+						<p>Chaque cursus de formation allie 40% de théorie et 60% de pratique. Les différents modules sont évalués sous forme de QCM, suivi d'un débrief sur les principaux points de blocage rencontrés.</p>
+						<p>Chaque participant finalise sa formation par un projet de développement reprenant l'essentiel des notions abordées. Piloté en méthodes  agiles, ce projet "tutoré" permet à l''équipe pédagogique d'évaluer, puis de valider - ou non - l'acquisition des nouvelles compétences.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="tail-middle2">
+			<div class="row-2">
+				<div class="indent3">
+					<div class="container">
+						<div class="col-1">
+							<h3>pages disponible</h3>
+							<ul class="news">
+								<li><a href="developpeurs.html">C'est quoi un developpeur ?</a></li>
+								<li><a href="page_metrique.html">Les Métriques</a></li>
+								<li><a href="PresentationDTA.html">Présentation DTA</a></li>
+								<li><a href="iot.html">Internet des Objets</a></li>
+								<li><a href="types-entreprises.html">Types d'entreprises</a></li>
+								<li><a href="presentation-formation.html">Présentation de la formation</a></li>
+								<li><a href="ecosysteme_front_end.html">Écosystème front-end</a></li>
+								<li><a href="ecosysteme-java.html">Écosystème Java</a></li>
+								<li><a href="Page_Methodo/PageMethodo.html">Gestion de projet</a></li>
+								<li><a href="page_nosql.html">NO-SQL</a></li>
+								<li><a href="robotique.html">Robotique</a></li>
+							</ul>
+						</div>
+						<div class="col-2">
+							<h3>Le parcours</h3>
+							<p>
+								<ul>
+									<li class="disc">Un parcours de 57 jours</li>
+									<li class="disc">Financé par Pole Emploi, le FAFIEC et DTA Ingénierie</li>
+									<li class="disc">Animé par des professionnels</li>
+									<li class="disc">Vise à résorber l'écart entre vos compétences actuelles, à priori plutôt généralistes et théoriques, et celles plus opérationnelles requises dans le cadre de projets JAVA</li>
+									<li class="disc">Et à vous intégrer durablement dans l’emploi</li>
+								</ul>
+							</p>
+							<h3>Objectifs pédagogiques</h3>
+							<p>A l’issue de cette formation, vous serez en mesure de :
+								<ul>
+									<li class="disc">Maîtriser la programmation objet et le langage Java en environnement JEE</li>
+									<li class="disc">Construire des interfaces graphiques avec AngularJS</li>
+									<li class="disc">Utiliser les principaux frameworks de présentation et de gestion des données</li>
+									<li class="disc">Gérer les tests et l’intégration continue des développements</li>
+									<li class="disc">Maîtriser le cycle de vie d’un projet Java et l’industrialisation des développements</li>
+									<li class="disc">Appliquer les bonnes pratiques de développement dans un contexte agile</li>
+									<li class="disc">Mieux gérer vos compétences personnelles : confiance en soi, communiquer et travailler en équipe</li>
+								</ul>
+							</p>
+							<h3>Détails de la formation</h3>
+							<p>
+							Concepteur Développeur JAVA-JEE<br/>
+							(57 jours - 399 h)
+								<ul>
+									<li class="square">Le métier de Concepteur-Développeur JAVA JEE</li>
+									<ul>
+										<li class="circle">Culture du développeur</li>
+										<li class="circle">Gestion des sources avec Git</li>
+										<li class="circle">Pratique de Github</li>
+										<li class="circle">Développement Personnel - Savoir-être & Communication</li>
+										<li class="circle">Introduction à l'agilité</li>
+									</ul>
+									<li class="square">Développement JAVA</li>
+									<ul>
+										<li class="circle">Langage Java - Approche impérative</li>
+										<li class="circle">Langage Java - Approche orientée objet</li>
+										<li class="circle">Prépa Certification Java 7 niveau 1 - 1Z0-803</li>
+										<li class="circle">Design pattern Java</li>
+										<li class="circle">Langage Java - Java 8</li>
+									</ul>
+									<li class="square">Industrialisation des développements et Usine logicielle</li>
+									<ul>
+										<li class="circle">Maven - Gestion du cycle de vie d'un projet</li>
+										<li class="circle">Intégration Continue avec Jenkins + Sonar + Nexus</li>
+									</ul>
+									<li class="square">Traitement des données</li>
+									<ul>
+										<li class="circle">Langage SQL - Pratique de MySQL</li>
+										<li class="circle">Java - Accès à une base de données relationnelle (JDBC & JPA)</li>
+									</ul>
+									<li class="square">Développement web front-end</li>
+									<ul>
+										<li class="circle">HTTP & HTML 5 </li>
+										<li class="circle">Introduction à JavaScript + jQuery</li>
+										<li class="circle">Introduction à CSS et frameworks CSS (Twitter Bootstrap)</li>
+									</ul>
+									<li class="square">Développement JavaEE</li>
+									<ul>
+										<li class="circle">Développement Web avec Java EE (Servlet, JSP, TagLibs)</li>
+										<li class="circle">EJB : Composants métiers avec Java EE</li>
+										<li class="circle">JAX-RS : REST avec Java EE </li>
+									</ul>
+									<li class="square">Développement Back-End avec Spring Framework</li>
+									<ul>
+										<li class="circle">Spring Framework - Core</li>
+										<li class="circle">Spring Framework - Accès aux données (JDBC, ORM & Data)</li>
+										<li class="circle">Spring Framework - AOP</li>
+										<li class="circle">Spring Framework - Présentation (Web, MVC & Services REST)</li>
+										<li class="circle">Spring Framework - Boot & Security</li>
+									</ul>
+									<li class="square">Développement Front-End avec AngularJS</li>
+									<ul>
+										<li class="circle">Outillage Front-End (NodeJS, NPM,...)</li>
+										<li class="circle">Javascript avancé</li>
+										<li class="circle">Développer des applications Web riches avec AngularJS</li>
+										<li class="circle">Tests Front-End (Karma, Jasmine, Protractor)</li>
+									</ul>
+									<li class="square">Atelier : finalisation du projet global</li>
+									<ul>
+										<li class="circle">Cycle de vie d’un projet et mise en place de Scrum</li>
+										<li class="circle">Projet Java EE, Spring Framework & AngularJS - Partie1</li>
+										<li class="circle">Certification java 7 niveau 1 1ZO-803</li>
+									</ul>
+								</ul>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+<!-- FOOTER -->
+	<div id="footer">
+		<p class="aligncenter">
+			Copyright - Type in your name here<br />
+			Website template designed by <a href="http://store.templatemonster.com?aff=netsib1" target="_blank" rel="nofollow">www.templatemonster.com</a><br />
+			3D Models provided by <a href="http://www.templates.com/product/3d-models/" target="_blank" rel="nofollow">www.templates.com</a>
 		</p>
-		<h2>Objectifs pédagogiques</h2>
-		<p>A l’issue de cette formation, vous serez en mesure de :
-			<ul>
-				<li>Maîtriser la programmation objet et le langage Java en environnement JEE</li>
-				<li>Construire des interfaces graphiques avec AngularJS</li>
-				<li>Utiliser les principaux frameworks de présentation et de gestion des données</li>
-				<li>Gérer les tests et l’intégration continue des développements</li>
-				<li>Maîtriser le cycle de vie d’un projet Java et l’industrialisation des développements</li>
-				<li>Appliquer les bonnes pratiques de développement dans un contexte agile</li>
-				<li>Mieux gérer vos compétences personnelles : confiance en soi, communiquer et travailler en équipe</li>
-			</ul>
-		</p>
-		<h2>Détails de la formation</h2>
-		<p>
-		Concepteur Développeur JAVA-JEE<br/>
-		(57 jours - 399 h)
-			<ul>
-				<li class="square">Le métier de Concepteur-Développeur JAVA JEE</li>
-				<ul>
-					<li>Culture du développeur</li>
-					<li>Gestion des sources avec Git</li>
-					<li>Pratique de Github</li>
-					<li>Développement Personnel - Savoir-être & Communication</li>
-					<li>Introduction à l'agilité</li>
-				</ul>
-				<li class="square">Développement JAVA</li>
-				<ul>
-					<li>Langage Java - Approche impérative</li>
-					<li>Langage Java - Approche orientée objet</li>
-					<li>Prépa Certification Java 7 niveau 1 - 1Z0-803</li>
-					<li>Design pattern Java</li>
-					<li>Langage Java - Java 8</li>
-				</ul>
-				<li class="square">Industrialisation des développements et Usine logicielle</li>
-				<ul>
-					<li>Maven - Gestion du cycle de vie d'un projet</li>
-					<li>Intégration Continue avec Jenkins + Sonar + Nexus</li>
-				</ul>
-				<li class="square">Traitement des données</li>
-				<ul>
-					<li>Langage SQL - Pratique de MySQL</li>
-					<li>Java - Accès à une base de données relationnelle (JDBC & JPA)</li>
-				</ul>
-				<li class="square">Développement web front-end</li>
-				<ul>
-					<li>HTTP & HTML 5 </li>
-					<li>Introduction à JavaScript + jQuery</li>
-					<li>Introduction à CSS et frameworks CSS (Twitter Bootstrap)</li>
-				</ul>
-				<li class="square">Développement JavaEE</li>
-				<ul>
-					<li>Développement Web avec Java EE (Servlet, JSP, TagLibs)</li>
-					<li>EJB : Composants métiers avec Java EE</li>
-					<li>JAX-RS : REST avec Java EE </li>
-				</ul>
-				<li class="square">Développement Back-End avec Spring Framework</li>
-				<ul>
-					<li>Spring Framework - Core</li>
-					<li>Spring Framework - Accès aux données (JDBC, ORM & Data)</li>
-					<li>Spring Framework - AOP</li>
-					<li>Spring Framework - Présentation (Web, MVC & Services REST)</li>
-					<li>Spring Framework - Boot & Security</li>
-				</ul>
-				<li class="square">Développement Front-End avec AngularJS</li>
-				<ul>
-					<li>Outillage Front-End (NodeJS, NPM,...)</li>
-					<li>Javascript avancé</li>
-					<li>Développer des applications Web riches avec AngularJS</li>
-					<li>Tests Front-End (Karma, Jasmine, Protractor)</li>
-				</ul>
-				<li class="square">Atelier : finalisation du projet global</li>
-				<ul>
-					<li>Cycle de vie d’un projet et mise en place de Scrum</li>
-					<li>Projet Java EE, Spring Framework & AngularJS - Partie1</li>
-					<li>Certification java 7 niveau 1 1ZO-803</li>
-				</ul>
-			</ul>
-		</p>
-	</body>
+	</div>
+</div>
+<script type="text/javascript"> Cufon.now(); </script>
+</body>
 </html>
